Заключил нужную информацию под тег main и разбил main по section. Внес некоторые правки

--- a/index.html
+++ b/index.html
@@ -14,32 +14,40 @@
 <body>
     <div class="wrapper">
 
-        <section class="hero">
+        <header class="header">
             <div class="container">
-                <header class="header">
-                    <a href="#" class="logo">
-                        <img src="./logo/logo.png" alt="video production" class="logo__img">
-                    </a>
-                    <nav class="menu">
-                        <ul class="menu__list">
-                            <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
-                        </ul>
-                    </nav>
-                    <address class="contacts">
-                        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                        <div class="contacts__dropdown-title">График работы</div>
-                    </address>
-                </header>
+                <a href="#" class="logo">
+                    <img src="./logo/logo.png" alt="video production" class="logo__img">
+                </a>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__item menu__item_active"><a href="#" class="menu__link">Главная</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                    </ul>
+                </nav>
+                <address class="contacts">
+                    <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                    <div class="contacts__dropdown-title">График работы</div>
+                </address>
+            </div>
+        </header>
 
-                <div class="hero__content">
-                    <div class="head__main">
-                        <h1 class="main__title">Снимем для вас креативное видео</h1>
-                        <h4 class="main__info">Креативный видеопродакшн полного цикла</h4>
-                        <a href="#" class="main__btn-info">Подробнее</a>
+        <main class="main">
+            <section class="hero--section">
+                <div class="container">
+                    <div class="hero__content">
+                        <div class="head__main">
+                            <h1 class="main__title">Снимем для вас креативное видео</h1>
+                            <h4 class="main__info">Креативный видеопродакшн полного цикла</h4>
+                            <a href="#" class="main__btn-info">Подробнее</a>
+                        </div>
                     </div>
+                </div>
+            </section>
 
+            <section class="services--section">
+                <div class="container">
                     <div class="services">
                         <div class="services__block">
                             <img src="./icons/tv.png" alt="1" class="services__img">
@@ -76,11 +84,15 @@
                             <a href="#" class="services__more-info">Подробнее</a>
                         </div>
                     </div>
+                </div>
+            </section>
 
-                    <div class="news_and_promo">
+            <section class="news_and_promo--section">
+                <div class="news_and_promo">
+                    <div class="container">
                         <h2 class="nap__title">Новости и акции</h2>
                         <div class="nap__promo-blocks">
-                            <div class="nap__promo">
+                            <div class="nap__promo camera">
                                 <img src="#" alt="" class="nap__img">
                                 <div class="nap__date">Декабрь 2019</div>
                                 <h3 class="nap__promo-title">Снимем ваш клип на 50% дешевле</h3>
@@ -89,7 +101,7 @@
                                     забронировать даты.</p>
 
                             </div>
-                            <div class="nap__promo">
+                            <div class="nap__promo wedding">
                                 <img src="#" alt="" class="nap__img">
                                 <div class="nap__date">Декабрь 2019</div>
                                 <h3 class="nap__promo-title">Акция для молодоженов 30%</h3>
@@ -101,7 +113,7 @@
                         <div class="paginator">
                             <div class="paginator__display">Страница 1 из 7</div>
                             <ul class="paginator__list">
-                                <li class="paginator__item">1</li>
+                                <li class="paginator__item paginator__item_active">1</li>
                                 <li class="paginator__item">2</li>
                                 <li class="paginator__item">3</li>
                                 <li class="paginator__item">4</li>
@@ -111,7 +123,11 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+            </section>
 
+            <section class="about-us--section">
+                <div class="container">
                     <div class="about-us">
                         <div class="about-us__block">
                             <h3 class="about-us__title">О нас</h3>
@@ -124,36 +140,38 @@
                         <img src="./img/cameraman.jpg" alt="Камера" class="about-us__img">
                     </div>
                 </div>
+            </section>
+        </main>
 
-                <footer class="footer">
-                    <a href="#" class="footer__logo"><img src="./logo/logo.png" alt="video production"></a>
-                    <nav class="footer__menu">
-                        <ul class="footer__menu_list">
-                            <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
-                        </ul>
-                    </nav>
-                    <div class="social">
-                        <ul class="social__list">
-                            <li class="social__item"><a href="#" class="social__link"><img src="./icons/telegram.svg"
-                                        class="social__telegram" alt="telegram"></a></li>
-                            <li class="social__item"><a href="#" class="social__link"><img src="./icons/vk.svg"
-                                        class="social__vk" alt="vk"></a></li>
-                            <li class="social__item"><a href="#" class="social__link"><img src="./icons/f.svg"
-                                        class="social__facebook" alt="facebook"></a>
-                            </li>
-                            <li class="social__item"><a href="#" class="social__link"><img src="./icons/in.svg"
-                                        class="social__instagram" alt="instagram"></a></li>
-                        </ul>
-                    </div>
-                    <address class="footer__contacts">
-                        <div class="footer__contacts_info">Бесплатный звонок по России</div>
-                        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                    </address>
-                </footer>
+        <footer class="footer">
+            <div class="container">
+                <a href="#" class="footer__logo"><img src="./logo/logo.png" alt="video production"></a>
+                <nav class="footer__menu">
+                    <ul class="footer__menu_list">
+                        <li class="menu__item menu__item_active"><a href="#" class="menu__link">Главная</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                        <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                    </ul>
+                </nav>
+                <div class="social">
+                    <ul class="social__list">
+                        <li class="social__item"><a href="#" class="social__link"><img src="./icons/telegram.svg"
+                                    class="social__telegram" alt="telegram"></a></li>
+                        <li class="social__item"><a href="#" class="social__link"><img src="./icons/vk.svg"
+                                    class="social__vk" alt="vk"></a></li>
+                        <li class="social__item"><a href="#" class="social__link"><img src="./icons/f.svg"
+                                    class="social__facebook" alt="facebook"></a>
+                        </li>
+                        <li class="social__item"><a href="#" class="social__link"><img src="./icons/in.svg"
+                                    class="social__instagram" alt="instagram"></a></li>
+                    </ul>
+                </div>
+                <address class="footer__contacts">
+                    <div class="footer__contacts_info">Бесплатный звонок по России</div>
+                    <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                </address>
             </div>
-        </section>
+        </footer>
     </div>
 </body>
 
