--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=1200px, initial-scale=1.0">
+    <meta name="viewport" content="width=1200, initial-scale=1.0">
     <title>VIDEO PRODUCTION</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
@@ -58,7 +58,7 @@
                             </div>
                             <p class="services__main-text">Креатив и производство рекламы, документального и
                                 корпоративного контента.</p>
-                            <a href="#" class="services__more-info">Подробнее</a>
+                            <a href="#" class="btn-info">Подробнее</a>
                         </div>
                         <div class="services__block">
                             <img src="./icons/clapper.png" alt="2" class="services__img">
@@ -69,7 +69,7 @@
                             </div>
                             <p class="services__main-text">Вы решили представиться своим слушателям, пополнить свой
                                 творческий багаж качественным видео? Прекрасно! </p>
-                            <a href="#" class="services__more-info">Подробнее</a>
+                            <a href="#" class="btn-info">Подробнее</a>
                         </div>
                         <div class="services__block">
                             <img src="./icons/film.png" alt="3" class="services__img">
@@ -81,7 +81,7 @@
                             <p class="services__main-text">Получите живое видео своего самого счастливого дня,
                                 которое
                                 Вы будете пересматривать снова и снова.</p>
-                            <a href="#" class="services__more-info">Подробнее</a>
+                            <a href="#" class="btn-info">Подробнее</a>
                         </div>
                     </div>
                 </div>
