--- a/services.html
+++ b/services.html
@@ -13,46 +13,110 @@
 
 <body>
     <div class="wrapper services-page-wrapper">
-        <header class="header">
+        <section class="top-line">
+            <header class="header">
+                <div class="container">
+                    <a href="#" class="logo">
+                        <img src="./logo/logo.png" alt="video production" class="logo__img">
+                    </a>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item menu__item_active"><a href="./index.html"
+                                    class="menu__link">Главная</a></li>
+                            <li class="menu__item"><a href="./services.html" class="menu__link">Услуги</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                        </ul>
+                    </nav>
+                    <address class="contacts">
+                        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                        <div class="contacts__dropdown-title">График работы</div>
+                    </address>
+                </div>
+            </header>
+
             <div class="container">
-                <a href="#" class="logo">
-                    <img src="./logo/logo.png" alt="video production" class="logo__img">
-                </a>
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__item menu__item_active"><a href="./index.html" class="menu__link">Главная</a></li>
-                        <li class="menu__item"><a href="./services.html" class="menu__link">Услуги</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                <h1 class="services__main__title">Услуги</h1>
+                <nav class="breadcrumbs">
+                    <ul class="breadcrumbs__list">
+                        <li class="breadcrumbs__item"><a href="./index.html">Главная</a></li>
+                        <li class="breadcrumbs__item breadcrumbs__item--active" aria-current="page"><a
+                                href="./services.html">Услуги</a></li>
                     </ul>
                 </nav>
-                <address class="contacts">
-                    <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                    <div class="contacts__dropdown-title">График работы</div>
-                </address>
             </div>
-        </header>
+        </section>
 
-        <main class="main">
-            <section class="hero--section">
-                <div class="container">
-                    <h1 class="services__main__title">Услуги</h1>
-                    <nav class="breadcrumb">
-                        <ol class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="./index.html">Главная</a></li>
-                            <li class="breadcrumb-item breadcrumb-item_active" aria-current="page"><a href="./services.html">Услуги</a></li>
-                        </ol>
-                    </nav>
+        <main class="main-services">
+            <div class="container">
+                <div class="main-services__blocks">
+                    <div class="main-services__block">
+                        <div class="main-services__img"><img src="./img/services__page/girls.jpg" alt="girls"></div>
+                        <div class="main-services__block-info">
+                            <h2 class="main-services__title">Съемки клипа</h2>
+                            <div class="main-services__text">
+                                <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
+                                    абзацев
+                                    более менее осмысленного текста рыбы на русском языке, а начинающему оратору
+                                    отточить
+                                    навык
+                                    публичных выступлений в домашних условиях. При создании генератора мы использовали
+                                    небезизвестный универсальный код речей. </p>
+                            </div>
+                            <a href="#" class="btn-info services__btn-info">Подробнее</a>
+                        </div>
+                    </div>
+                    <div class="main-services__block">
+                        <div class="main-services__img"><img src="./img/services__page/engineer.jpg" alt="engineer">
+                        </div>
+                        <div class="main-services__block-info">
+                            <h2 class="main-services__title">Съемка мероприятий</h2>
+                            <div class="main-services__text">
+                                <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
+                                    абзацев
+                                    более менее осмысленного текста рыбы на русском языке, а начинающему оратору
+                                    отточить
+                                    навык
+                                    публичных выступлений в домашних условиях. При создании генератора мы использовали
+                                    небезизвестный универсальный код речей. </p>
+                            </div>
+                            <a href="#" class="btn-info">Подробнее</a>
+                        </div>
+                    </div>
                 </div>
-            </section>
+            </div>
         </main>
 
+        <section class="partners">
+            <div class="container">
+                <h3 class="partners__title">Партнеры</h3>
+                <div class="partners__blocks">
+                    <div class="partners__block-img"><img src="./icons/services__page/divico.png" alt="divico"
+                            class="partners__img"></div>
+                    <div class="partners__block-img"><img src="./icons/services__page/ds.png" alt="ds"
+                            class="partners__img"></div>
+                    <div class="partners__block-img"><img src="./icons/services__page/park.png" alt="park"
+                            class="partners__img"></div>
+                    <div class="partners__block-img"><img src="./icons/services__page/zvibes.png" alt="zvibes"
+                            class="partners__img"></div>
+                    <div class="partners__block-img"><img src="./icons/services__page/rosvideo.png" alt="rosvideo"
+                            class="partners__img"></div>
+                    <div class="partners__block-img"><img src="./icons/services__page/zavod.png" alt="zavod"
+                            class="partners__img"></div>
+                    <div class="partners__block-img"><img src="./icons/services__page/pixel.png" alt="pixel"
+                            class="partners__img"></div>
+                    <div class="partners__block-img"><img src="./icons/services__page/expotv.png" alt="expotv"
+                            class="partners__img"></div>
+                </div>
+            </div>
+        </section>
 
         <footer class="footer">
             <div class="container">
                 <a href="#" class="footer__logo"><img src="./logo/logo.png" alt="video production"></a>
                 <nav class="footer__menu">
                     <ul class="footer__menu_list">
-                        <li class="menu__item menu__item_active"><a href="./index.html" class="menu__link">Главная</a></li>
+                        <li class="menu__item menu__item_active"><a href="./index.html" class="menu__link">Главная</a>
+                        </li>
                         <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
                     </ul>
