--- a/services.html
+++ b/services.html
@@ -83,6 +83,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="paginator">
+                    <div class="paginator__display paginator__item-black">Страница 1 из 7</div>
+                    <ul class="paginator__list">
+                        <li class="paginator__item paginator__item-black paginator__item_active">1</li>
+                        <li class="paginator__item paginator__item-black">2</li>
+                        <li class="paginator__item paginator__item-black">3</li>
+                        <li class="paginator__item paginator__item-black">4</li>
+                        <li class="paginator__item paginator__item-black">5</li>
+                        <li class="paginator__item paginator__item-black">6</li>
+                        <li class="paginator__item paginator__item-black">7</li>
+                    </ul>
+                </div>
             </div>
         </main>
 
@@ -90,22 +102,26 @@
             <div class="container">
                 <h3 class="partners__title">Партнеры</h3>
                 <div class="partners__blocks">
-                    <div class="partners__block-img"><img src="./icons/services__page/divico.png" alt="divico"
-                            class="partners__img"></div>
-                    <div class="partners__block-img"><img src="./icons/services__page/ds.png" alt="ds"
-                            class="partners__img"></div>
-                    <div class="partners__block-img"><img src="./icons/services__page/park.png" alt="park"
-                            class="partners__img"></div>
-                    <div class="partners__block-img"><img src="./icons/services__page/zvibes.png" alt="zvibes"
-                            class="partners__img"></div>
-                    <div class="partners__block-img"><img src="./icons/services__page/rosvideo.png" alt="rosvideo"
-                            class="partners__img"></div>
-                    <div class="partners__block-img"><img src="./icons/services__page/zavod.png" alt="zavod"
-                            class="partners__img"></div>
-                    <div class="partners__block-img"><img src="./icons/services__page/pixel.png" alt="pixel"
-                            class="partners__img"></div>
-                    <div class="partners__block-img"><img src="./icons/services__page/expotv.png" alt="expotv"
-                            class="partners__img"></div>
+                   <div class="partners__block">
+                        <div class="partners__block-img"><img src="./icons/services__page/divico.png" alt="divico"
+                                class="partners__img"></div>
+                        <div class="partners__block-img"><img src="./icons/services__page/ds.png" alt="ds"
+                                class="partners__img"></div>
+                        <div class="partners__block-img"><img src="./icons/services__page/park.png" alt="park"
+                                class="partners__img"></div>
+                        <div class="partners__block-img"><img src="./icons/services__page/zvibes.png" alt="zvibes"
+                                class="partners__img"></div>
+                   </div>
+                    <div class="partners__block">
+                        <div class="partners__block-img"><img src="./icons/services__page/rosvideo.png" alt="rosvideo"
+                                class="partners__img"></div>
+                        <div class="partners__block-img"><img src="./icons/services__page/zavod.png" alt="zavod"
+                                class="partners__img"></div>
+                        <div class="partners__block-img"><img src="./icons/services__page/pixel.png" alt="pixel"
+                                class="partners__img"></div>
+                        <div class="partners__block-img"><img src="./icons/services__page/expotv.png" alt="expotv"
+                                class="partners__img"></div>
+                    </div>
                 </div>
             </div>
         </section>
