Добавил эффект grayscale на ссылки

--- a/services.html
+++ b/services.html
@@ -103,24 +103,24 @@
                 <h3 class="partners__title">Партнеры</h3>
                 <div class="partners__blocks">
                    <div class="partners__block">
-                        <a href="#" class="partners__block-img"><img src="./icons/services__page/divico.png" alt="divico"
-                                class="partners__img"></a>
-                        <a href="#" class="partners__block-img"><img src="./icons/services__page/ds.png" alt="ds"
-                                class="partners__img"></a>
-                        <a href="#" class="partners__block-img"><img src="./icons/services__page/park.png" alt="park"
-                                class="partners__img"></a>
-                        <a href="#" class="partners__block-img"><img src="./icons/services__page/zvibes.png" alt="zvibes"
-                                class="partners__img"></a>
+                        <a href="#" class="partner__link"><img src="./icons/services__page/divico.png" alt="divico"
+                                class="partner__img"></a>
+                        <a href="#" class="partner__link"><img src="./icons/services__page/ds.png" alt="ds"
+                                class="partner__img"></a>
+                        <a href="#" class="partner__link"><img src="./icons/services__page/park.png" alt="park"
+                                class="partner__img"></a>
+                        <a href="#" class="partner__link"><img src="./icons/services__page/zvibes.png" alt="zvibes"
+                                class="partner__img"></a>
                    </div>
                     <div class="partners__block">
-                        <a href="#" class="partners__block-img"><img src="./icons/services__page/rosvideo.png" alt="rosvideo"
-                                class="partners__img"></a>
-                        <a href="#" class="partners__block-img"><img src="./icons/services__page/zavod.png" alt="zavod"
-                                class="partners__img"></a>
-                        <a href="#" class="partners__block-img"><img src="./icons/services__page/pixel.png" alt="pixel"
-                                class="partners__img"></a>
-                        <a href="#" class="partners__block-img"><img src="./icons/services__page/expotv.png" alt="expotv"
-                                class="partners__img"></a>
+                        <a href="#" class="partner__link"><img src="./icons/services__page/rosvideo.png" alt="rosvideo"
+                                class="partner__img"></a>
+                        <a href="#" class="partner__link"><img src="./icons/services__page/zavod.png" alt="zavod"
+                                class="partner__img"></a>
+                        <a href="#" class="partner__link"><img src="./icons/services__page/pixel.png" alt="pixel"
+                                class="partner__img"></a>
+                        <a href="#" class="partner__link"><img src="./icons/services__page/expotv.png" alt="expotv"
+                                class="partner__img"></a>
                     </div>
                 </div>
             </div>
