--- a/services.html
+++ b/services.html
@@ -21,9 +21,9 @@
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__item menu__item_active"><a href="./index.html"
+                            <li class="menu__item"><a href="./index.html"
                                     class="menu__link">Главная</a></li>
-                            <li class="menu__item"><a href="./services.html" class="menu__link">Услуги</a></li>
+                            <li class="menu__item menu__item_active"><a href="./services.html" class="menu__link">Услуги</a></li>
                             <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
                         </ul>
                     </nav>
@@ -131,9 +131,9 @@
                 <a href="#" class="footer__logo"><img src="./logo/logo.png" alt="video production"></a>
                 <nav class="footer__menu">
                     <ul class="footer__menu_list">
-                        <li class="menu__item menu__item_active"><a href="./index.html" class="menu__link">Главная</a>
+                        <li class="menu__item"><a href="./index.html" class="menu__link">Главная</a>
                         </li>
-                        <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
+                        <li class="menu__item menu__item_active"><a href="#" class="menu__link">Услуги</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
                     </ul>
                 </nav>
