Продолжаю верстать Отзывы

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul class="menu__list">
                         <li class="menu__item menu__item_active"><a href="#" class="menu__link">Главная</a></li>
                         <li class="menu__item"><a href="./services.html" class="menu__link">Услуги</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                        <li class="menu__item"><a href="./reviews.html" class="menu__link">Отзывы</a></li>
                     </ul>
                 </nav>
                 <address class="contacts">
@@ -150,7 +150,7 @@
                     <ul class="footer__menu_list">
                         <li class="menu__item menu__item_active"><a href="#" class="menu__link">Главная</a></li>
                         <li class="menu__item"><a href="./services.html" class="menu__link">Услуги</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                        <li class="menu__item"><a href="./reviews.html" class="menu__link">Отзывы</a></li>
                     </ul>
                 </nav>
                 <div class="social">
