--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
         <section class="top-line">
             <header class="header">
                 <div class="container">
-                    <a href="#" class="logo">
+                    <a href="./index.html" class="logo">
                         <img src="./logo/logo.png" alt="video production" class="logo__img">
                     </a>
                     <nav class="menu">
@@ -24,7 +24,7 @@
                             <li class="menu__item"><a href="./index.html"
                                     class="menu__link">Главная</a></li>
                             <li class="menu__item menu__item_active"><a href="./services.html" class="menu__link">Услуги</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                            <li class="menu__item"><a href="./reviews.html" class="menu__link">Отзывы</a></li>
                         </ul>
                     </nav>
                     <address class="contacts">
@@ -134,7 +134,7 @@
                         <li class="menu__item"><a href="./index.html" class="menu__link">Главная</a>
                         </li>
                         <li class="menu__item menu__item_active"><a href="#" class="menu__link">Услуги</a></li>
-                        <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                        <li class="menu__item"><a href="./reviews.html" class="menu__link">Отзывы</a></li>
                     </ul>
                 </nav>
                 <div class="social">
